   meant that data wasn't parsed correctly.
   <https://github.com/jhy/jsoup/issues/104>

 * Fixed an issue with a missing quote when serialising DocumentType nodes.
   <https://github.com/jhy/jsoup/issues/109>

 * Fixed issue where a single 0 character was lexed incorrectly as a null character.
   <https://github.com/jhy/jsoup/issues/107>

*** Release 1.6.0 [2011-Jun-13]
 * HTML5 conformant parser. Complete reimplemenation of HTML tokenisation and parsing, to implement the
   http://whatwg.org/html spec. This ensures jsoup parses HTML identically to current modern browsers.

 * When parsing files from disk, files are loaded via memory mapping, to increase parse speed.

 * Reduced memory overhead and lowered garbage collector pressure with Attribute, Node and Element model optimisations.

 * Improved "abs:" absolute URL handling in Elements.attr("abs:href") and Node.hasAttr("abs:href").
   <https://github.com/jhy/jsoup/issues/97>

 * Fixed cookie handling issue in jsoup.Connect where empty cookies would cause a validation exception.
   <https://github.com/jhy/jsoup/issues/87>

 * Added jsoup.Connect configuration options to allow HTTP errors to be ignored, and the content-type to be ignored.
   Contributed by Jesse Piascik (piascikj)
   <https://github.com/jhy/jsoup/pull/78>

 * Added Node.before(node) and Node.after(node), to allow existing nodes to be moved, or new nodes to be inserted, into
   precise DOM positions.

 * Added Node.unwrap() and Elements.unwrap(), to remove a node but keep its contents. Useful for e.g. removing unwanted
   formatting tags.
   <https://github.com/jhy/jsoup/issues/100>

 * Now handles unclosed <title> tags in document by breaking out of the title at the next start tag, instead of
   eating up to the end of the document.
   <https://github.com/jhy/jsoup/issues/82>

 * Added OSGi bundle support to the jsoup package jar.
   <https://github.com/jhy/jsoup/issues/98>

*** Release 1.5.2 [2011-02-27]